# imessage-metrics

./: .gitignore  LICENSE.md  README.md
IMessage-Analysis/IMessage-Analysis/: ContentView.swift  IMessage_AnalysisApp.swift
IMessage-Analysis/IMessage-Analysis.xcodeproj/: project.pbxproj
IMessage-Analysis/IMessage-Analysis.xcodeproj/project.xcworkspace/xcuserdata/arnavjindal.xcuserdatad/: UserInterfaceState.xcuserstate
IMessage-Analysis/IMessage-Analysis.xcodeproj/xcuserdata/arnavjindal.xcuserdatad/xcschemes/: xcschememanagement.plist
IMessage-Analysis/IMessage-AnalysisTests/: IMessage_AnalysisTests.swift
IMessage-Analysis/IMessage-AnalysisUITests/: IMessage_AnalysisUITests.swift  IMessage_AnalysisUITestsLaunchTests.swift
imessage-ananlysis/: .gitignore  dump_contacts.swift  dump_conversation.py  explore.py  me_analysis.py  pyproject.toml  run.sh
